Se agrega la funcionalidad de rabbitmq

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 #mongo
-spring.data.mongodb.uri=mongodb://UsrBazDigital:B4zD1g1T4l20164$78@localhost:27021/test
+spring.data.mongodb.uri=mongodb://UsrBazDigital:B4zD1g1T4l20164$78@10.63.32.180:27021/BAZBDMDESA
 
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.hibernate.ddl-auto=create
@@ -8,3 +8,14 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url= jdbc:mysql://localhost:3306/testdata
 spring.datasource.username= root
 spring.datasource.password= abelo003
+
+#redis
+#spring.redis.url= # Connection URL. Overrides host, port, and password. User is ignored. Example: redis://user:password@example.com:6379
+spring.redis.host=localhost
+spring.redis.port=6379
+
+#rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
