--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
         
+        <!--rabbitmq-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        
         <!--mockito test-->
         <dependency>
             <groupId>org.mockito</groupId>
