--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 #mongo
-spring.data.mongodb.uri=mongodb://UsrBazDigital:B4zD1g1T4l20164$78@10.63.32.180:27021/BAZBDMDESA
+spring.data.mongodb.uri=mongodb://UsrBazDigital:B4zD1g1T4l20164$78@localhost:27021/test
 
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.hibernate.ddl-auto=create
